[gd_scene load_steps=11 format=3 uid="uid://dcyok8jhypmiv"]

[ext_resource type="Script" path="res://ui/menu_button/animated_button.gd" id="1_1uxb8"]
[ext_resource type="Texture2D" uid="uid://dd720txt5p4db" path="res://assets/buttons/back_button.png" id="1_vbuye"]
[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_xy0sf"]
[ext_resource type="Texture2D" uid="uid://bjycg3kn7urr8" path="res://assets/buttons/settings_button.png" id="3_346d0"]
[ext_resource type="Texture2D" uid="uid://cies2uaf7v5fc" path="res://assets/buttons/credits_button.png" id="4_wxojg"]
[ext_resource type="Texture2D" uid="uid://cpn1ai75gghti" path="res://assets/buttons/quit_button.png" id="5_fsf5k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i17im"]
atlas = ExtResource("1_vbuye")
region = Rect2(0, 0, 33, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhych"]
atlas = ExtResource("3_346d0")
region = Rect2(0, 0, 70, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apdpb"]
atlas = ExtResource("4_wxojg")
region = Rect2(0, 0, 59, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvcqd"]
atlas = ExtResource("5_fsf5k")
region = Rect2(0, 0, 31, 16)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xy0sf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0509804, 0.0588235, 0.501961)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="BackButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 64)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_i17im")
stretch_mode = 5
script = ExtResource("1_1uxb8")
on_hover_scale = 1.2

[node name="SettingsButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 64)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_mhych")
stretch_mode = 5
script = ExtResource("1_1uxb8")
on_hover_scale = 1.2

[node name="CreditsButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(236, 64)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_apdpb")
stretch_mode = 5
script = ExtResource("1_1uxb8")
on_hover_scale = 1.2

[node name="QuitButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(124, 64)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_rvcqd")
stretch_mode = 5
script = ExtResource("1_1uxb8")
on_hover_scale = 1.2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
